--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-  "name": "irazasyed/telegram-bot-sdk",
+  "name": "ricardoooo0/telegram-bot-sdk",
   "description": "The Unofficial Telegram Bot API PHP SDK",
   "keywords": ["telegram", "telegram bot", "telegram bot api", "telegram sdk", "telegram php", "laravel telegram", "laravel"],
   "type": "library",
-  "homepage": "https://github.com/irazasyed/telegram-bot-sdk",
+  "homepage": "https://github.com/Ricardoooo0/telegram-bot-sdk",
   "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Syed Irfaq R.",
       "email": "syed+gh@lukonet.com",
-      "homepage": "https://github.com/irazasyed"
+      "homepage": "https://github.com/Ricardoooo0"
     }
   ],
   "require": {
@@ -35,7 +35,7 @@
     }
   },
   "suggest": {
-    "irazasyed/larasupport": "Allows you to use any Laravel Package in Lumen by adding support!",
+    "Ricardoooo0/larasupport": "Allows you to use any Laravel Package in Lumen by adding support!",
     "illuminate/container": "Hold dependencies to be injected in commands constructors"
   },
   "scripts": {
